# AnimeDlp

./: README.md  build.sh  cy-master.ini  pyproject.toml
src/AnimeDlp/: cli.py
